# Wires

./: README.md  pyproject.toml
wires/: config.py  constants.py  errors.py  main.py  model.py  utils.py
wires/database/: __init__.py  database.py
wires/database/migrations/0000/: describe.json  migrations.sql
wires/database/migrations/0001/: describe.json  migrations.sql
wires/database/migrations/0002/: describe.json  migrations.sql
wires/database/migrations/0003/: describe.json  migrations.sql
wires/database/models/: __init__.py  guild.py  highlight.py  ticket_config.py  user.py
wires/plugins/: __init__.py  base.py  errors.py  highlights.py
wires/plugins/highlights/: plugin.py  wizard.py
wires/plugins/tickets/: manage.py  plugin.py
